Fix button on safari

--- a/components/DownloadApp/DownloadApp.module.css
+++ b/components/DownloadApp/DownloadApp.module.css
@@ -46,6 +46,7 @@
   bottom: 2px;
   border: none;
   cursor: pointer;
+  margin: 0;
 }
 
 .button:hover,
